deleted AD blog

--- a/references.bib
+++ b/references.bib
@@ -152,6 +152,39 @@
   file = {/Users/jinko/Zotero/storage/4CC2TZTV/Dyck et al. - 2023 - Lecanemab in Early Alzheimer’s Disease.pdf}
 }
 
+@article{elkinsResearchNoteInterpreting2024,
+  title = {Research {{Note}}: {{Interpreting}} Confidence Intervals},
+  shorttitle = {Research {{Note}}},
+  author = {Elkins, Mark},
+  year = 2024,
+  month = oct,
+  journal = {Journal of Physiotherapy},
+  volume = {70},
+  number = {4},
+  pages = {319--323},
+  issn = {18369553},
+  doi = {10.1016/j.jphys.2024.08.010},
+  urldate = {2026-01-11},
+  langid = {english}
+}
+
+@article{elkinsResearchNoteInterpreting2024a,
+  title = {Research {{Note}}: {{Interpreting}} Confidence Intervals},
+  shorttitle = {Research {{Note}}},
+  author = {Elkins, Mark},
+  year = 2024,
+  month = oct,
+  journal = {Journal of Physiotherapy},
+  volume = {70},
+  number = {4},
+  pages = {319--323},
+  issn = {1836-9553},
+  doi = {10.1016/j.jphys.2024.08.010},
+  urldate = {2026-01-11},
+  keywords = {Confidence intervals,Estimation methods,Physical therapy,Smallest worthwhile effect,Statistical inference},
+  file = {/Users/jinko/Zotero/storage/LHPVKXYZ/Elkins - 2024 - Research Note Interpreting confidence intervals.pdf;/Users/jinko/Zotero/storage/BB37JRUB/S1836955324000869.html}
+}
+
 @article{ezratyCommercialLysogenyBroth2014,
   title = {Commercial {{Lysogeny Broth}} Culture Media and Oxidative Stress: {{A}} Cautious Tale},
   shorttitle = {Commercial {{Lysogeny Broth}} Culture Media and Oxidative Stress},
@@ -827,6 +860,20 @@
   file = {/Users/jinko/Zotero/storage/W2X7AHEH/S0960852421003023.html}
 }
 
+@article{masicEvidenceBasedMedicine2008,
+  title = {Evidence {{Based Medicine}} - {{New Approaches}} and {{Challenges}}},
+  author = {Masic, Izet and Miokovic, Milan and Muhamedagic, Belma},
+  year = 2008,
+  journal = {Acta Informatica Medica},
+  volume = {16},
+  number = {4},
+  pages = {219},
+  issn = {0353-8109},
+  doi = {10.5455/aim.2008.16.219-225},
+  urldate = {2026-01-11},
+  file = {/Users/jinko/Zotero/storage/6NR537BV/Masic et al. - 2008 - Evidence Based Medicine - New Approaches and Challenges.pdf}
+}
+
 @article{mchughGlobalIrondependentGene2003,
   title = {Global {{Iron-dependent Gene Regulation}} in {{{\emph{Escherichia}}}}{\emph{ Coli}}},
   author = {McHugh, Jonathan P. and {Rodr{\'i}guez-Qui{\~n}ones}, Francisco and {Abdul-Tehrani}, Hossein and Svistunenko, Dimitri A. and Poole, Robert K. and Cooper, Chris E. and Andrews, Simon C.},
@@ -1088,6 +1135,40 @@
   file = {/Users/jinko/Zotero/storage/FL9Y36QP/Rombo et al. - 2025 - Integration of Basic Science into Virtual Patient Cases to Enhance Clinical Reasoning Skills.pdf}
 }
 
+@article{rovettaPValuesConfidenceIntervals2025,
+  title = {P-{{Values}} and Confidence Intervals as Compatibility Measures: Guidelines for Interpreting Statistical Studies in Clinical Research},
+  shorttitle = {P-{{Values}} and Confidence Intervals as Compatibility Measures},
+  author = {Rovetta, Alessandro and Piretta, Luca and Mansournia, Mohammad Ali},
+  year = 2025,
+  month = feb,
+  journal = {The Lancet Regional Health - Southeast Asia},
+  volume = {33},
+  pages = {100534},
+  issn = {27723682},
+  doi = {10.1016/j.lansea.2025.100534},
+  urldate = {2026-01-11},
+  langid = {english},
+  file = {/Users/jinko/Zotero/storage/LXYQQNH8/Rovetta et al. - 2025 - p-Values and confidence intervals as compatibility measures guidelines for interpreting statistical.pdf}
+}
+
+@article{sackettEvidenceBasedMedicine1996,
+  title = {Evidence Based Medicine: What It Is and What It Isn't},
+  shorttitle = {Evidence Based Medicine},
+  author = {Sackett, David L and Rosenberg, William M C and Gray, J A Muir and Haynes, R Brian and Richardson, W Scott},
+  year = 1996,
+  month = jan,
+  journal = {BMJ},
+  volume = {312},
+  number = {7023},
+  pages = {71--72},
+  issn = {0959-8138, 1468-5833},
+  doi = {10.1136/bmj.312.7023.71},
+  urldate = {2026-01-11},
+  copyright = {http://www.bmj.com/company/legal-information/terms-conditions/legal-information/tdm-licencepolicy},
+  langid = {english},
+  file = {/Users/jinko/Zotero/storage/5CUUZ55H/Sackett et al. - 1996 - Evidence based medicine what it is and what it isn't.pdf}
+}
+
 @article{sezonovEscherichiaColiPhysiology2007,
   title = {Escherichia Coli {{Physiology}} in {{Luria-Bertani Broth}}},
   author = {Sezonov, Guennadi and {Joseleau-Petit}, Dani{\`e}le and D'Ari, Richard},
@@ -1204,6 +1285,23 @@
   file = {/Users/jinko/Zotero/storage/9FR5J2QI/Ting et al. - 2020 - Targeted Depletion of Bacteria from Mixed Populations by Programmable Adhesion with Antagonistic Com.pdf}
 }
 
+@article{tonelliPhilosophicalLimitsEvidencebased1998,
+  title = {The Philosophical Limits of Evidence-Based Medicine:},
+  shorttitle = {The Philosophical Limits of Evidence-Based Medicine},
+  author = {Tonelli, M R},
+  year = 1998,
+  month = dec,
+  journal = {Academic Medicine},
+  volume = {73},
+  number = {12},
+  pages = {1234--40},
+  issn = {1040-2446},
+  doi = {10.1097/00001888-199812000-00011},
+  urldate = {2026-01-11},
+  langid = {english},
+  file = {/Users/jinko/Zotero/storage/YYMY6URN/Tonelli - 1998 - The philosophical limits of evidence-based medicine.pdf}
+}
+
 @article{torresTonBDependentSystemsUropathogenic2001,
   title = {{{TonB-Dependent Systems}} of {{Uropathogenic}} {{{\emph{Escherichia}}}}{\emph{ Coli}} : {{Aerobactin}} and {{Heme Transport}} and {{TonB Are Required}} for {{Virulence}} in the {{Mouse}}},
   shorttitle = {{{TonB-Dependent Systems}} of {{Uropathogenic}} {{{\emph{Escherichia}}}}{\emph{ Coli}}},
@@ -1235,6 +1333,55 @@
   langid = {english},
   annotation = {OCLC: 1039422993},
   file = {/Users/jinko/Zotero/storage/R3FZS7FS/Willey et al. - 2020 - Prescott's microbiology.pdf}
+}
+
+@article{worrallEvidenceMedicineEvidenceBased2007,
+  title = {Evidence in {{Medicine}} and {{Evidence}}-{{Based Medicine}}},
+  author = {Worrall, John},
+  year = 2007,
+  month = nov,
+  journal = {Philosophy Compass},
+  volume = {2},
+  number = {6},
+  pages = {981--1022},
+  issn = {1747-9991, 1747-9991},
+  doi = {10.1111/j.1747-9991.2007.00106.x},
+  urldate = {2026-01-11},
+  abstract = {Abstract             It is surely obvious that medicine, like any other rational activity, must be based on evidence. The interest is in the details: how exactly are the general principles of the logic of evidence to be applied in medicine? Focussing on the development, and current claims of the `Evidence-Based Medicine' movement, this article raises a number of difficulties with the rationales that have been supplied in particular for the `evidence hierarchy' and for the very special role within that hierarchy of randomized controlled trials (and meta-analyses of the results of randomized controlled trials). The point is not at all to question the application of a scientific approach to evidence in medicine, but, on the contrary, to indicate a number of areas where philosophers of science can contribute to a proper implementation of exactly that scientific-evidential approach.},
+  langid = {english}
+}
+
+@article{worrallEvidenceMedicineEvidenceBased2007a,
+  title = {Evidence in {{Medicine}} and {{Evidence}}-{{Based Medicine}}},
+  author = {Worrall, John},
+  year = 2007,
+  month = nov,
+  journal = {Philosophy Compass},
+  volume = {2},
+  number = {6},
+  pages = {981--1022},
+  issn = {1747-9991, 1747-9991},
+  doi = {10.1111/j.1747-9991.2007.00106.x},
+  urldate = {2026-01-11},
+  abstract = {Abstract             It is surely obvious that medicine, like any other rational activity, must be based on evidence. The interest is in the details: how exactly are the general principles of the logic of evidence to be applied in medicine? Focussing on the development, and current claims of the `Evidence-Based Medicine' movement, this article raises a number of difficulties with the rationales that have been supplied in particular for the `evidence hierarchy' and for the very special role within that hierarchy of randomized controlled trials (and meta-analyses of the results of randomized controlled trials). The point is not at all to question the application of a scientific approach to evidence in medicine, but, on the contrary, to indicate a number of areas where philosophers of science can contribute to a proper implementation of exactly that scientific-evidential approach.},
+  langid = {english}
+}
+
+@article{worrallEvidenceMedicineEvidenceBased2007b,
+  title = {Evidence in {{Medicine}} and {{Evidence}}-{{Based Medicine}}},
+  author = {Worrall, John},
+  year = 2007,
+  month = nov,
+  journal = {Philosophy Compass},
+  volume = {2},
+  number = {6},
+  pages = {981--1022},
+  issn = {1747-9991, 1747-9991},
+  doi = {10.1111/j.1747-9991.2007.00106.x},
+  urldate = {2026-01-11},
+  abstract = {Abstract             It is surely obvious that medicine, like any other rational activity, must be based on evidence. The interest is in the details: how exactly are the general principles of the logic of evidence to be applied in medicine? Focussing on the development, and current claims of the `Evidence-Based Medicine' movement, this article raises a number of difficulties with the rationales that have been supplied in particular for the `evidence hierarchy' and for the very special role within that hierarchy of randomized controlled trials (and meta-analyses of the results of randomized controlled trials). The point is not at all to question the application of a scientific approach to evidence in medicine, but, on the contrary, to indicate a number of areas where philosophers of science can contribute to a proper implementation of exactly that scientific-evidential approach.},
+  langid = {english},
+  file = {/Users/jinko/Zotero/storage/CEG2LWJD/Worrall - 2007 - Evidence in Medicine and Evidence‐Based Medicine.pdf}
 }
 
 @article{yangSubinhibitoryConcentrationsAllicin2016,
