--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,36 @@
+@article{abbasiWhyPatientsBenefit2024,
+  title = {Why Some {{Patients Benefit}} from {{Participating}} in a {{Sham Surgery Trial}}},
+  author = {Abbasi, Ali B. and Cifu, Adam S.},
+  year = 2024,
+  month = apr,
+  journal = {Annals of Surgery},
+  volume = {279},
+  number = {4},
+  pages = {577--582},
+  issn = {0003-4932},
+  doi = {10.1097/SLA.0000000000006141},
+  urldate = {2026-01-11},
+  abstract = {Objective:               We analyze the ethics of sham surgical trials from a utilitarian perspective and explore whether patients can benefit from participating in these trials.                                         Background:               Sham-controlled randomized trials are an essential tool to evaluate the risks and benefits of some surgical procedures. However, sham trials are controversial because they expose patients to the harms of a sham procedure without the possibility of benefit. We argue that ethical analyses of sham trials have focused only on the harms of sham surgery and neglected to account for the harms of the procedure being studied.                                         Methods:               We develop a theoretical model to estimate the harms and benefits experienced by patients who enter a sham surgery trial, taking into account the harms and benefits of the sham and intervention.                                         Results:               When the procedure in question is found to be ineffective, sham trials typically result in a net benefit to participants because some participants are only exposed to the harms of the sham procedure, which are much lower than the harms of the full procedure. When the procedure is found to be beneficial, the primary harm to patients who underwent the sham is not due to the sham itself but because they suffer a delay in receiving an effective intervention.                                         Conclusions:               Patients often benefit from participating in sham surgery trials because the harms of the sham procedure are lower than the harms of the full procedure, which may turn out to be ineffective. Our results call for re-thinking the ethics of sham surgery trials.},
+  langid = {english}
+}
+
+@article{abbasiWhyPatientsBenefit2024a,
+  title = {Why Some {{Patients Benefit}} from {{Participating}} in a {{Sham Surgery Trial}}},
+  author = {Abbasi, Ali B. and Cifu, Adam S.},
+  year = 2024,
+  month = apr,
+  journal = {Annals of Surgery},
+  volume = {279},
+  number = {4},
+  pages = {577--582},
+  issn = {0003-4932},
+  doi = {10.1097/SLA.0000000000006141},
+  urldate = {2026-01-11},
+  abstract = {Objective: We analyze the ethics of sham surgical trials from a utilitarian perspective and explore whether patients can benefit from participating in these trials. Background: Sham-controlled randomized trials are an essential tool to evaluate the risks and benefits of some surgical procedures. However, sham trials are controversial because they expose patients to the harms of a sham procedure without the possibility of benefit. We argue that ethical analyses of sham trials have focused only on the harms of sham surgery and neglected to account for the harms of the procedure being studied. Methods: We develop a theoretical model to estimate the harms and benefits experienced by patients who enter a sham surgery trial, taking into account the harms and benefits of the sham and intervention. Results: When the procedure in question is found to be ineffective, sham trials typically result in a net benefit to participants because some participants are only exposed to the harms of the sham procedure, which are much lower than the harms of the full procedure. When the procedure is found to be beneficial, the primary harm to patients who underwent the sham is not due to the sham itself but because they suffer a delay in receiving an effective intervention. Conclusions: Patients often benefit from participating in sham surgery trials because the harms of the sham procedure are lower than the harms of the full procedure, which may turn out to be ineffective. Our results call for re-thinking the ethics of sham surgery trials.},
+  langid = {english},
+  file = {/Users/jinko/Zotero/storage/YIZ53IK4/Abbasi and Cifu - 2024 - Why some Patients Benefit from Participating in a Sham Surgery Trial.pdf}
+}
+
 @article{advaniStateoftheArtReviewRecurrent2025,
   title = {State-of-the-{{Art Review}}: {{Recurrent Uncomplicated Urinary Tract Infections}} in {{Women}}},
   shorttitle = {State-of-the-{{Art Review}}},
@@ -15,6 +48,23 @@
   copyright = {https://academic.oup.com/pages/standard-publication-reuse-rights},
   langid = {english},
   file = {/Users/jinko/Zotero/storage/Q7T43KIE/Advani et al. - 2025 - State-of-the-Art Review Recurrent Uncomplicated Urinary Tract Infections in Women.pdf}
+}
+
+@article{al-lameePercutaneousCoronaryIntervention2018,
+  title = {Percutaneous Coronary Intervention in Stable Angina ({{ORBITA}}): A Double-Blind, Randomised Controlled Trial},
+  shorttitle = {Percutaneous Coronary Intervention in Stable Angina ({{ORBITA}})},
+  author = {{Al-Lamee}, Rasha and Thompson, David and Dehbi, Hakim-Moulay and Sen, Sayan and Tang, Kare and Davies, John and Keeble, Thomas and Mielewczik, Michael and Kaprielian, Raffi and Malik, Iqbal S and Nijjer, Sukhjinder S and Petraco, Ricardo and Cook, Christopher and Ahmad, Yousif and Howard, James and Baker, Christopher and Sharp, Andrew and Gerber, Robert and Talwar, Suneel and Assomull, Ravi and Mayet, Jamil and Wensel, Roland and Collier, David and {Shun-Shin}, Matthew and Thom, Simon A and Davies, Justin E and Francis, Darrel P and {Al-Lamee}, Rasha and Thompson, David and Sen, Sayan and Tang, Kare and Davies, John and Keeble, Thomas and Kaprielian, Raffi and Malik, Iqbal S and Nijjer, Sukhjinder S and Petraco, Ricardo and Cook, Christopher and Ahmad, Yousif and Howard, James and {Shun-Shin}, Matthew and Sethi, Amarjit and Baker, Christopher and Sharp, Andrew and Ramrakha, Punit and Gerber, Robert and Talwar, Suneel and Assomull, Ravi and Foale, Rodney and Mayet, Jamil and Wensel, Roland and Thom, Simon A and Davies, Justin E and Francis, Darrel P and Khamis, Ramzi and Hadjiloizou, Nearchos and Khan, Masood and Kooner, Jaspal and Bellamy, Michael and Mikhail, Ghada and Clifford, Piers and O'Kane, Peter and Levy, Terry and Swallow, Rosie},
+  year = 2018,
+  month = jan,
+  journal = {The Lancet},
+  volume = {391},
+  number = {10115},
+  pages = {31--40},
+  issn = {01406736},
+  doi = {10.1016/S0140-6736(17)32714-9},
+  urldate = {2026-01-11},
+  langid = {english},
+  file = {/Users/jinko/Zotero/storage/MVRLCGZC/Al-Lamee et al. - 2018 - Percutaneous coronary intervention in stable angina (ORBITA) a double-blind, randomised controlled.pdf}
 }
 
 @article{antoniouTrimethoprimSulfamethoxazoleInducedHyperkalemiaPatients2010,
@@ -925,6 +975,23 @@
   file = {/Users/jinko/Zotero/storage/48HQ77N2/Mi et al. - 2016 - Dimethyl Sulfoxide Protects Escherichia coli from Rapid Antimicrobial-Mediated Killing.pdf}
 }
 
+@article{millerShamProceduresEthics2004,
+  title = {Sham {{Procedures}} and the {{Ethics}} of {{Clinical Trials}}},
+  author = {Miller, Franklin G and Kaptchuk, Ted J},
+  year = 2004,
+  month = dec,
+  journal = {Journal of the Royal Society of Medicine},
+  volume = {97},
+  number = {12},
+  pages = {576--578},
+  issn = {0141-0768, 1758-1095},
+  doi = {10.1177/014107680409701205},
+  urldate = {2026-01-11},
+  copyright = {https://journals.sagepub.com/page/policies/text-and-data-mining-license},
+  langid = {english},
+  file = {/Users/jinko/Zotero/storage/HBU4RMSE/Miller and Kaptchuk - 2004 - Sham Procedures and the Ethics of Clinical Trials.pdf}
+}
+
 @book{neyMetaphysicsIntroduction2014,
   title = {Metaphysics: {{An Introduction}}},
   shorttitle = {Metaphysics},
@@ -1058,6 +1125,22 @@
   abstract = {Biofilms are communities of microbes attached to surfaces, which can be found in medical, industrial and natural settings. In fact, life in a biofilm probably represents the predominate mode of growth for microbes in most environments. Mature biofilms have a few distinct characteristics. Biofilm microbes are typically surrounded by an extracellular matrix that provides structure and protection to the community. Microbes growing in a biofilm also have a characteristic architecture generally comprised of macrocolonies (containing thousands of cells) surrounded by fluid-filled channels. Biofilm-grown microbes are also notorious for their resistance to a range of antimicrobial agents including clinically relevant antibiotics.},
   langid = {english},
   file = {/Users/jinko/Zotero/storage/4C5CHBUW/O'Toole - 2011 - Microtiter Dish Biofilm Formation Assay.pdf}
+}
+
+@article{prasadNecessityShamControls2019,
+  title = {The {{Necessity}} of {{Sham Controls}}},
+  author = {Prasad, Vinay and Cifu, Adam S.},
+  year = 2019,
+  month = feb,
+  journal = {The American Journal of Medicine},
+  volume = {132},
+  number = {2},
+  pages = {e29-e30},
+  issn = {00029343},
+  doi = {10.1016/j.amjmed.2018.07.030},
+  urldate = {2026-01-11},
+  langid = {english},
+  file = {/Users/jinko/Zotero/storage/A9FDGKED/Prasad and Cifu - 2019 - The Necessity of Sham Controls.pdf}
 }
 
 @article{rajapakshaInsightAcrABTolCComplex2021,
