edit to the spices blog

--- a/references.bib
+++ b/references.bib
@@ -102,6 +102,22 @@
   file = {/Users/jinko/Zotero/storage/WTNZU229/Bacheller and Bernstein - 1997 - URINARY TRACT INFECTIONS.pdf}
 }
 
+@article{bhattacharyyaHeritableIronMemory2023,
+  title = {A Heritable Iron Memory Enables Decision-Making in {{Escherichia}} Coli},
+  author = {Bhattacharyya, Souvik and Bhattarai, Nabin and Pfannenstiel, Dylan M. and Wilkins, Brady and Singh, Abhyudai and Harshey, Rasika M.},
+  year = 2023,
+  month = nov,
+  journal = {Proceedings of the National Academy of Sciences},
+  volume = {120},
+  number = {48},
+  pages = {e2309082120},
+  publisher = {Proceedings of the National Academy of Sciences},
+  doi = {10.1073/pnas.2309082120},
+  urldate = {2026-01-12},
+  abstract = {The importance of memory in bacterial decision-making is relatively unexplored. We show here that a prior experience of swarming is remembered when Escherichia coli encounters a new surface, improving its future swarming efficiency. We conducted {$>$}10,000 single-cell swarm assays to discover that cells store memory in the form of cellular iron levels. This ``iron'' memory preexists in planktonic cells, but the act of swarming reinforces it. A cell with low iron initiates swarming early and is a better swarmer, while the opposite is true for a cell with high iron. The swarming potential of a mother cell, which tracks with its iron memory, is passed down to its fourth-generation daughter cells. This memory is naturally lost by the seventh generation, but artificially manipulating iron levels allows it to persist much longer. A mathematical model with a time-delay component faithfully recreates the observed dynamic interconversions between different swarming potentials. We demonstrate that cellular iron levels also track with biofilm formation and antibiotic tolerance, suggesting that iron memory may impact other physiologies.},
+  file = {/Users/jinko/Zotero/storage/Q33RWLZ6/Bhattacharyya et al. - 2023 - A heritable iron memory enables decision-making in Escherichia coli.pdf}
+}
+
 @article{bienRoleUropathogenicEscherichia2012,
   title = {Role of {{Uropathogenic Escherichia}} Coli {{Virulence Factors}} in {{Development}} of {{Urinary Tract Infection}} and {{Kidney Damage}}},
   author = {Bien, Justyna and Sokolova, Olga and Bozko, Przemyslaw},
@@ -639,6 +655,41 @@
   file = {/Users/jinko/Zotero/storage/F3KT79WH/Inoue et al. - 2007 - Genome-wide screening of genes required for swarming motility in Escherichia coli K-12.pdf}
 }
 
+@book{jacobJapaneseWarCrimes2018,
+  title = {Japanese {{War Crimes}} during {{World War II}}: {{Atrocity}} and the {{Psychology}} of {{Collective Violence}}},
+  author = {Jacob, Frank},
+  year = 2018,
+  month = jun,
+  publisher = {ABC-CLIO},
+  copyright = {All rights reserved},
+  langid = {english},
+  annotation = {Item ID: \_:n0},
+  file = {/Users/jinko/Zotero/storage/72X4DXBF/Jacob - 2018 - Japanese War Crimes during World War II Atrocity and the Psychology of Collective Violence.epub}
+}
+
+@article{jaeschkeUsersGuidesMedical,
+  title = {Users' {{Guides}} to the {{Medical Literature}}},
+  author = {Jaeschke, Roman and Sackett, David L},
+  langid = {english},
+  file = {/Users/jinko/Zotero/storage/2PUERZIC/Jaeschke and Sackett - Users' Guides to the Medical Literature.pdf}
+}
+
+@article{jaeschkeUsersGuidesMedical1994,
+  title = {Users' {{Guides}} to the {{Medical Literature}}: {{III}}. {{How}} to {{Use}} an {{Article About}} a {{Diagnostic Test B}}. {{What Are}} the {{Results}} and {{Will They Help Me}} in {{Caring}} for {{My Patients}}?},
+  shorttitle = {Users' {{Guides}} to the {{Medical Literature}}},
+  author = {Jaeschke, Roman},
+  year = 1994,
+  month = mar,
+  journal = {JAMA},
+  volume = {271},
+  number = {9},
+  pages = {703},
+  issn = {0098-7484},
+  doi = {10.1001/jama.1994.03510330081039},
+  urldate = {2026-01-12},
+  langid = {english}
+}
+
 @article{jangAcrABTolCMajorEfflux2023,
   title = {{{AcrAB-TolC}}, a Major Efflux Pump in {{Gram}} Negative Bacteria: Toward Understanding Its Operation Mechanism},
   shorttitle = {{{AcrAB-TolC}}, a Major Efflux Pump in {{Gram}} Negative Bacteria},
@@ -808,6 +859,17 @@
   abstract = {TonB couples the cytoplasmic membrane protonmotive force (pmf) to active transport across the outer membrane, potentially through a series of conformational changes. Previous studies of a TonB transmembrane domain mutant (TonB-{$\Delta$}V17) and its phenotypical suppressor (ExbB-A39E) suggested that TonB is conformationally sensitive. Here, two new mutations of the conserved TonB transmembrane domain SHLS motif were isolated, TonB-S16L and -H20Y, as were two new suppressors, ExbB-V35E and -V36D. Each suppressor ExbB restored at least partial function to the TonB mutants, although TonB-{$\Delta$}V17, for which both the conserved motif and the register of the predicted transmembrane domain {$\alpha$}-helix are affected, was the most refractory. As demonstrated previously, TonB can undergo at least one conformational change, provided both ExbB and a functional TonB transmembrane domain are present. Here, we show that this conformational change reflects the ability of TonB to respond to the cytoplasmic membrane proton gradient, and occurs in proportion to the level of TonB activity attained by mutant--suppressor pairs. The phenotype of TonB-{$\Delta$}V17 was more complex than the -S16L and -H20Y mutations, in that, beyond the inability to be energized efficiently, it was also conditionally unstable. This second defect was evident only after suppression by the ExbB mutants, which allow transmembrane domain mutants to be energized, and presented as the rapid turnover of TonB-{$\Delta$}V17. Importantly, this degradation was dependent upon the presence of a TonB-dependent ligand, suggesting that TonB conformation also changes following the energy transduction event. Together, these observations support a dynamic model of energy transduction in which TonB cycles through a set of conformations that differ in potential energy, with a transition to a higher energy state driven by pmf and a transition to a lower energy state accompanying release of stored potential energy to an outer membrane receptor.},
   langid = {english},
   file = {/Users/jinko/Zotero/storage/35CTKQ94/Larsen et al. - 1999 - Protonmotive force, ExbB and ligand-bound FepA dri.pdf;/Users/jinko/Zotero/storage/29GRHKRK/j.1365-2958.1999.01317.html}
+}
+
+@book{liJapaneseWarCrimes2001,
+  title = {Japanese {{War Crimes}}},
+  author = {Li, Peter},
+  year = 2001,
+  publisher = {{Taylor and Francis}},
+  address = {Somerset},
+  abstract = {Cover -- Half Title -- Title Page -- Copyright Page -- Contents -- Preface -- Chapter 1. An Overview: Japan's War Responsibility and the Pan-Asian Movement for Redress and Compensation -- Part I. It's Never Too Late to Seek Justice -- Chapter 2. Japan's War Crimes: Has Justice Been Served? -- Chapter 3. Probing the Issues of Reconciliation More than Fifty Years after the Asia-Pacific War -- Chapter 4. Victor's Justice and Japan's Amnesia: The Tokyo War Crimes Trial Reconsidered -- Chapter 5. Hirohito's War Crimes Responsibility: The Unrepentant Emperor -- Chapter 6. Accountability, Justice, and the Importance of Memory in the "Era of War" -- Part II. The American POW Experience Remembered -- Chapter 7. The Bataan Death March -- Chapter 8. Mitsui: "We Will Send You To Omuta" -- Part III. Psychological Responses -- Chapter 9. The Nanjing Massacre: The Socio-Psychological Effects -- Chapter 10. One Army Surgeon's Account of Vivisectionon Human Subjects in China -- Part IV. Artistic Responses -- Chapter 11. Reunion: A Play in 2 Acts, 5 Scenes, and an Epilogue (Excerpts) -- Chapter 12. Cinematic Representations of the Rape of Nanking -- Part V. History Will Not Forget -- Chapter 13. The Nanking Holocaust: Memory, Trauma and Reconciliation -- Chapter 14. The Great Asian-Pacific Crescent of Pain: Japan's War from Manchuria to Hiroshima, 1931 to -- Chapter 15. Women's International War Crimes Tribunal on Japan's Military Sexual Slavery: Memory, Identity, and Society -- Chapter 16. The Looting of Books in Nanjing -- Chapter 17. Japan's Biochemical Warfare and Experimentation in China -- Chapter 18. Japan's Historical Myopia -- Chapter 19. War Crimes and Redress: A Canadian Jewish Perspective -- Appendix: The Tokyo Appeal -- About the Contributors -- Index},
+  isbn = {978-1-351-51109-4},
+  langid = {english}
 }
 
 @article{lippolisDifferentialGeneExpression2016,
@@ -1234,6 +1296,18 @@
   file = {/Users/jinko/Zotero/storage/LXYQQNH8/Rovetta et al. - 2025 - p-Values and confidence intervals as compatibility measures guidelines for interpreting statistical.pdf}
 }
 
+@book{sackettClinicalEpidemiologyBasic1991,
+  title = {Clinical Epidemiology: A Basic Science for Clinical Medicine},
+  shorttitle = {Clinical Epidemiology},
+  editor = {Sackett, David L.},
+  year = 1991,
+  edition = {2. ed},
+  publisher = {{Little, Brown and Comp}},
+  address = {Boston},
+  isbn = {978-0-316-76599-2},
+  langid = {english}
+}
+
 @article{sackettEvidenceBasedMedicine1996,
   title = {Evidence Based Medicine: What It Is and What It Isn't},
   shorttitle = {Evidence Based Medicine},
@@ -1250,6 +1324,37 @@
   copyright = {http://www.bmj.com/company/legal-information/terms-conditions/legal-information/tdm-licencepolicy},
   langid = {english},
   file = {/Users/jinko/Zotero/storage/5CUUZ55H/Sackett et al. - 1996 - Evidence based medicine what it is and what it isn't.pdf}
+}
+
+@article{sackettRulesEvidenceClinical1986,
+  title = {Rules of {{Evidence}} and {{Clinical Recommendations}} on the {{Use}} of {{Antithrombotic Agents}}},
+  author = {Sackett, D.L.},
+  year = 1986,
+  month = feb,
+  journal = {Chest},
+  volume = {89},
+  number = {2},
+  pages = {2S-3S},
+  issn = {00123692},
+  doi = {10.1378/chest.89.2_Supplement.2S},
+  urldate = {2026-01-12},
+  langid = {english}
+}
+
+@article{sackettRulesEvidenceClinical1986a,
+  title = {Rules of {{Evidence}} and {{Clinical Recommendations}} on the {{Use}} of {{Antithrombotic Agents}}},
+  author = {Sackett, D.L.},
+  year = 1986,
+  month = feb,
+  journal = {Chest},
+  volume = {89},
+  number = {2},
+  pages = {2S-3S},
+  issn = {00123692},
+  doi = {10.1378/chest.89.2_Supplement.2S},
+  urldate = {2026-01-12},
+  langid = {english},
+  file = {/Users/jinko/Zotero/storage/M98YKAPV/Sackett - 1986 - Rules of Evidence and Clinical Recommendations on the Use of Antithrombotic Agents.pdf}
 }
 
 @article{sezonovEscherichiaColiPhysiology2007,
@@ -1525,5 +1630,9 @@
 }
 
 @book{zotero-item-189,
+  type = {Book}
+}
+
+@book{zotero-item-322,
   type = {Book}
 }
