edits to the spices blog post

--- a/blog/spices.qmd
+++ b/blog/spices.qmd
@@ -16,7 +16,7 @@ Student-centered learning makes more sense to me. In its simplest form, it means
 
 The arguments for the student-centered approach are not complicated. It makes learning active rather than passive, and it trains the habit that matters most in medicine: the ability to identify what you don’t know and then go out of your way to fix it. It also allows the student to learn in a way that can actually be efficient for them rather than being forced into a one-size-fits-all method that cannot be guaranteed valuable on the instructor side. Besides, learning on your own is simply more fun. You get to do it your own way, and you get to chase coherence instead of pretending that compliance is understanding.
 
-The objections to student-centered learning tend to be weak. One objection is that many teachers have only experienced a teacher-centered approach. My objection is that this is not a valid argument against the principles of student-centered learning. It’s an argument that the familiar approach is convenient, not that it is better. Education should never be treated with such obstinance. Another objection is that students may be apprehensive because their previous experience was teacher-centered. My objection is harsher: physicians have a moral obligation to learn for their patients without being spoon-fed—keeping up with literature, relearning what time has eroded, and updating what evidence overturns. If you can’t do that, don’t become a physician. Student-centered learning emphasizes exactly this form of active learning, and that is why I argue for it very liberally.
+The objections to student-centered learning tend to be weak. One objection is that many teachers have only experienced a teacher-centered approach. My objection is that this is not a valid argument against the principles of student-centered learning. It’s an argument that the familiar approach is convenient, not that it is better. Education should never be treated with such obstinance. Another objection is that students may be apprehensive because their previous experience was teacher-centered. My objection is harsher: physicians have a moral obligation to learn for their patients without being spoon-fed—keeping up with literature, relearning what time has eroded, and updating what evidence overturns. If you feel incapable of this, don’t become a physician. Student-centered learning emphasizes exactly this form of active learning, and that is why I argue for it very liberally.
 
 ### Problem-based Learning vs Information-gathering Model
 
